--- a/demo-web/src/main/resources/application.properties
+++ b/demo-web/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
 server.port=8002
 
+# Context path of the application.
+server.context-path=/demo
+
 # Enable template caching.
 spring.thymeleaf.cache=true 
 # Check that the templates location exists.
@@ -22,3 +25,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html 
 
 spring.mvc.static-path-pattern=/static/**
+
+#logback config file path 
+logging.config=classpath:logback.xml  
