--- a/demo-common/pom.xml
+++ b/demo-common/pom.xml
@@ -21,5 +21,20 @@
 
 	<dependencies>
 
+ 
 	</dependencies>
+	
+	<build>
+	   <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <showWarnings>true</showWarnings>
+                </configuration>
+            </plugin>
+	   </plugins>
+	</build>
 </project>
